# oxapy

./: .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  build.sh  pyproject.toml
.github/workflows/: CI.yaml
examples/: serializer.py
examples/api/: main.py  models.py  settings.py  utils.py
examples/htmx/: main.py  settings.py
examples/htmx/templates/: index.html.j2  login.html.j2
oxapy/: __init__.py  __init__.pyi  exceptions.pyi  jwt.pyi  serializer.pyi  templating.pyi
oxapy/exceptions/: __init__.pyi
oxapy/jwt/: __init__.pyi
oxapy/oxapy/jwt/: __init__.pyi
oxapy/serializer/: __init__.pyi
oxapy/templating/: __init__.pyi
src/: catcher.rs  cors.rs  exceptions.rs  into_response.rs  json.rs  jwt.rs  lib.rs  middleware.rs  multipart.rs  request.rs  response.rs  routing.rs  session.rs  status.rs  stub_gen.rs
src/handling/: request_handler.rs  response_handler.rs
src/serializer/: fields.rs  mod.rs
src/templating/: minijinja.rs  mod.rs  tera.rs
tests/: api.py  app.py  conftest.py  test.py  test_cors.py  test_exceptions.py  test_http_server.py  test_response.py  test_session.py  utils.py
