[package]
name = "oxapy"
version = "0.8.4"
edition = "2024"
authors = ["FITAHIANA Nomeniavo Joe <24nomeniavo@gmail.com>"]
repository = "https://github.com/j03-dev/oxapy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxapy"
crate-type = ["cdylib", "rlib"]


[dependencies]
# Python bindings
pyo3 = ">=0.28.0"
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
pyo3-stub-gen = { git = "https://github.com/j03-dev/pyo3-stub-gen", branch = "fix/pypy-graalpy-initialization-error" }

# Async / Futures
futures-util = "0.3.31"
tokio = { version = "1", features = ["full"] }

# HTTP stack
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
multer = "3.1.0"

# Routing
matchit = { git = "https://github.com/ibraheemdev/matchit", branch = "master" }

# Serialization / Data formats
serde = "1.0.228"
serde_json = "1.0.145"
jsonschema = { version = "0.46.4", default-features = false }

# Template engines
minijinja = "2.14.0"
tera = "1.20"

# Utilities
ahash = "0.8.12"
ctrlc = "3.5.1"
glob = "0.3.3"
rand = "0.10.0-rc.5"
url = "2.5.7"

jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
